@@ -199,6 +199,7 @@ Version 1.5
  - Add Dome On/Off Plug-In Switch (Nechry)
  - Add Tronika Touch Panel Wall Controller - ZSC-01D (Nechry)
  - Add Dome Door/Window Sensor Pro (Nechry)
+ - Add Dome Motion Detector (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
